css/styles.css
body {
  background-image: url("../images/black.jpg");
}

#page-wrapper {
  width: 960px;
  margin: 0 auto;
  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1);
  border-radius: 12px 12px 0px 0px;
}

#header {
  position: relative;
  margin-top: 40px;
  border-radius: 12px 12px 0px 0px;
}

#header h1 {
  position: absolute;
  left: 420px;
  top:5px;
  font-size: 3em;
  font-family: 'Devonshire', cursive;
  color: #E35335;
}

